got links working and added a textbox to home page

--- a/README
+++ b/README
@@ -1,13 +1,9 @@
 # Rheo_docs
 
-FIXME: write description
+A document management system to help Leonard learn technology needed
 
 ## Usage
 
-FIXME: write
+coming soon
 
-## License
 
-Copyright (C) 2010 FIXME
-
-Distributed under the Eclipse Public License, the same as Clojure.
